[XPU] Support OCR models * add exp and reciprocal for activation * add conv2d transpose op * add fill constant op * add im2sequence op * add interpolate op (including nearest and bilinear) * add lrn op * add split op * add sum op * add topk op * add gru(int31) op * fix bug in elementwise arithmetic op * fix bug in conv2d op * fix bug in dropout op * fix bug in cast op, test=develop test=xpu

--- a/lite/operators/CMakeLists.txt
+++ b/lite/operators/CMakeLists.txt
@@ -26,6 +26,7 @@ add_operator(interpolate_op basic SRCS interpolate_op.cc DEPS ${op_DEPS})
 add_operator(argmax_op basic SRCS argmax_op.cc DEPS ${op_DEPS})
 add_operator(prior_box_op basic SRCS prior_box_op.cc DEPS ${op_DEPS})
 add_operator(concat_op basic SRCS concat_op.cc DEPS ${op_DEPS})
+add_operator(sum_op basic SRCS sum_op.cc DEPS ${op_DEPS})
 add_operator(pad2d_op basic SRCS pad2d_op.cc DEPS ${op_DEPS})
 add_operator(calib_op basic SRCS calib_op.cc DEPS ${op_DEPS})
 add_operator(split_op basic SRCS split_op.cc DEPS ${op_DEPS})
