--- a/lite/kernels/xpu/CMakeLists.txt
+++ b/lite/kernels/xpu/CMakeLists.txt
@@ -54,7 +54,9 @@ else()
   add_kernel(topk_compute_xpu XPU extra SRCS topk_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(im2sequence_compute_xpu XPU extra SRCS im2sequence_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(gru_compute_xpu XPU extra SRCS gru_compute.cc DEPS ${lite_kernel_deps})
+  add_kernel(gru_unit_compute_xpu XPU extra SRCS gru_unit_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(norm_compute_xpu XPU extra SRCS norm_compute.cc DEPS ${lite_kernel_deps})
+  add_kernel(pad_constant_like_compute_xpu XPU extra SRCS pad_constant_like_compute.cc DEPS ${lite_kernel_deps})
 
   # extra(fused kernel)
   add_kernel(__xpu__resnet50_compute_xpu XPU extra SRCS __xpu__resnet50_compute.cc DEPS ${lite_kernel_deps})
