--- a/lite/core/mir/CMakeLists.txt
+++ b/lite/core/mir/CMakeLists.txt
@@ -26,6 +26,7 @@ lite_cc_library(mir_passes
       fusion/reshape_fuse_pass.cc
       fusion/__xpu__resblock_reduction_fuse_pass.cc
       fusion/__xpu__resblock_normal_fuse_pass.cc
+      fusion/__xpu__consecutive_conv2d_fuse_pass.cc
       fusion/__xpu__resnet_fuse_pass.cc
       fusion/__xpu__res2net_fuse_pass.cc
       fusion/__xpu__resnet_cbam_fuse_pass.cc
