--- a/lite/kernels/xpu/CMakeLists.txt
+++ b/lite/kernels/xpu/CMakeLists.txt
@@ -32,12 +32,15 @@ else()
   add_kernel(sum_compute_xpu XPU basic SRCS sum_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(interpolate_compute_xpu XPU basic SRCS interpolate_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(fill_constant_compute_xpu XPU basic SRCS fill_constant_compute.cc DEPS ${lite_kernel_deps})
+  add_kernel(fill_any_like_compute_xpu XPU basic SRCS fill_any_like_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(transpose_compute_xpu XPU basic SRCS transpose_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(density_prior_box_compute XPU basic SRCS density_prior_box_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(yolo_box_compute_xpu XPU basic SRCS yolo_box_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(prior_box_compute_xpu XPU basic SRCS prior_box_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(box_coder_compute XPU basic SRCS box_coder_compute.cc DEPS ${lite_kernel_deps})
   add_kernel(assign_value_compute XPU basic SRCS assign_value_compute.cc DEPS ${lite_kernel_deps})
+  add_kernel(roi_align_compute XPU basic SRCS roi_align_compute.cc DEPS ${lite_kernel_deps})
+  add_kernel(clip_compute XPU basic SRCS clip_compute.cc DEPS ${lite_kernel_deps})
 
   # extra
   add_kernel(lookup_table_compute_xpu XPU extra SRCS lookup_table_compute.cc DEPS ${lite_kernel_deps})
